# py-web-automation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  comprehensive-guide.md  examples.md  features.md  installation.md  quickstart.md  testing.md  troubleshooting.md
examples/: advanced_auth.py  advanced_usage.py  api_only_usage.py  basic_usage.py  cache_example.py  circuit_breaker_example.py  combined_e2e_example.py  database_example.py  error_handling.py  graphql_example.py  grpc_example.py  metrics_example.py  middleware_example.py  page_objects_example.py  plugins_example.py  query_builder_example.py  rate_limit_example.py  request_builder_example.py  retry_example.py  simple_auth.py  soap_example.py  ui_only_usage.py  validators_example.py  visual_testing_example.py  websocket_example.py
py_web_automation/: __init__.py  cache.py  circuit_breaker.py  config.py  exceptions.py  metrics.py  middleware.py  page_objects.py  plugins.py  query_builder.py  rate_limit.py  retry.py  utils.py  validators.py  visual_testing.py
py_web_automation/clients/: __init__.py  api_client.py  base_client.py  db_client.py  graphql_client.py  grpc_client.py  models.py  request_builder.py  soap_client.py  ui_client.py  websocket_client.py
py_web_automation/clients/api_clients/graphql_client/: __init__.py  graphql_client.py  graphql_result.py  metrics.py  rate_limit.py  retry.py
py_web_automation/clients/api_clients/graphql_client/middleware/: __init__.py  auth_middleware.py  context.py  logging_middleware.py  metrics_middleware.py  middleware.py  rate_limit_middleware.py  (+2 more)
py_web_automation/clients/api_clients/grpc_client/: __init__.py  grpc_client.py  grpc_result.py  metrics.py  rate_limit.py  retry.py
py_web_automation/clients/api_clients/http_client/: __init__.py  exceptions.py  http_client.py  http_result.py  rate_limit.py  request_builder.py  retry.py  validator.py
py_web_automation/clients/api_clients/soap_client/: __init__.py  metrics.py  rate_limit.py  retry.py  soap_client.py  soap_result.py
py_web_automation/clients/broker_clients/: broker_client.py  kafka_client.py  rabbitmq_client.py
py_web_automation/clients/db_adapters/: mysql_adapter.py  postgresql_adapter.py  sqlite_adapter.py
py_web_automation/clients/db_clients/: __init__.py  db_client.py  mysql_client.py  postgresql_client.py  query_builder.py  sqlite_client.py  types.py
py_web_automation/clients/http_client/: __init__.py  exceptions.py  http_client.py  http_result.py  metrics.py  rate_limit.py  request_builder.py  request_validator.py  retry.py  validator.py
py_web_automation/clients/http_client/middleware/: auth_middleware.py  context.py  logging_middleware.py  metrics_middleware.py  middleware.py  rate_limit_middleware.py  retry_middleware.py  validation_middleware.py
py_web_automation/clients/streaming_clients/websocket_client/: __init__.py  metrics.py  rate_limit.py  retry.py  websocket_client.py  websocket_result.py
py_web_automation/clients/ui_clients/: __init__.py  visual_testing.py
py_web_automation/clients/ui_clients/async_ui_client/: page_objects.py  ui_client.py
py_web_automation/clients/ui_clients/sync_ui_client/: page_objects.py  ui_client.py
specs/: __init__.py
specs/001-constitution-review/: __init__.py  data-model.md  plan.md  quickstart.md  research.md  run_review.py  spec.md  tasks.md
specs/001-constitution-review/checklists/: requirements.md
specs/001-constitution-review/contracts/: report-api.md
specs/001-constitution-review/reports/: compliance_report.json  compliance_report.md  remediation_plan.md  violations_by_principle.json
specs/001-constitution-review/tools/: __init__.py  __main__.py  ast_parser.py  base_checker.py  check_async.py  check_code_style.py  check_docs.py  check_error_handling.py  check_git.py  check_imports.py  check_package_mgmt.py  check_performance.py  check_resources.py  check_separation.py  check_solid.py  check_testing_standards.py  check_tests.py  check_types.py  config.py  file_discovery.py  generate_report.py  models.py  review_orchestrator.py  subprocess_utils.py  test_report_generation.py  utils.py  violation_collector.py
test_cases/integration/: MISSING_INTEGRATION_TEST_CASES.md  README.md  SUMMARY.md  cache.md  circuit_breaker.md  db_client_integration.md  end_to_end.md  external_services.md  graphql_client.md  grpc_client.md  metrics.md  middleware.md  page_objects.md  plugins.md  query_builder_integration.md  rate_limit.md  request_builder.md  retry.md  soap_client.md  validators.md  websocket_client.md
test_cases/unit/: api_client.md  base_client.md  cache.md  circuit_breaker.md  config.md  db_client.md  exceptions.md  graphql_client.md  grpc_client.md  metrics.md  middleware.md  models.md  page_objects.md  plugins.md  query_builder.md  rate_limit.md  request_builder.md  retry.md  soap_client.md  ui_client.md  utils.md  validators.md  visual_testing.md  websocket_client.md
tests/: conftest.py
tests/data/: __init__.py  config_with_file.yaml  constants.py  invalid_format.yaml  invalid_format_config.yaml  mini_app_config.yaml  minimal_config.yaml  missing_session_config.yaml  valid_yaml.yaml
tests/fixtures/: __init__.py  api_client.py  base_client.py  config.py  data_fixtures.py  integration_mocks.py  metrics.py  middleware.py  rate_limit.py  streaming_client.py  ui_client.py
tests/performance/: test_performance.py
tests/unit/: test_api_client.py  test_base_client.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_db_client.py  test_db_client_adapters.py  test_graphql_client.py  test_grpc_client.py  test_grpc_client_additional.py  test_metrics.py  test_middleware.py  test_models.py  test_page_objects.py  test_plugins.py  test_query_builder.py  test_rate_limit.py  test_request_builder.py  test_retry.py  test_soap_client.py  test_ui_client.py  test_utils.py  test_validators.py  test_visual_testing.py  test_websocket_client.py
tests/unit/clients/: __init__.py
tests/unit/clients/api_clients/: __init__.py
(+47 files in other folders)
