[project]
name = "py-web-automation"
version = "2.0.0"
description = "Comprehensive Python framework for automated testing of web applications"
authors = [{ name = "Ravil Shakerov", email = "xellaopromaster@yandex.ru" }]
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "msgspec>=0.20.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "websockets>=13.1",
    "aiosqlite>=0.20.0",
    "pillow>=12.0.0",
    "aiokafka>=0.12.0",
    "aio-pika>=9.5.8",
    "grpclib>=0.4.7",
    "zeep>=4.2.1",
    "graphql-core>=3.2.3",
    "gql>=3.5.0",
    "aiohttp>=3.10.0",
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
]
keywords = [
    "web automation",
    "api testing",
    "ui testing",
    "browser automation",
    "testing framework",
    "rest api",
    "graphql",
    "grpc",
    "soap",
    "websocket",
    "kafka",
    "rabbitmq",
    "message broker",
    "database testing",
    "playwright",
    "httpx",
    "async",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
[dependency-groups]
# Testing dependencies
test = [
    "pytest>=8.5.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "pytest-playwright>=0.4.4",
    "pytest-resource-usage>=1.0.0",
    "psutil>=5.9.0",
    "allure-pytest>=2.13.2",
]
# Formatting, linting, type checking
dev_sup = [
    "ruff>=0.8.0",
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
    "types-pyyaml>=6.0.12.20250516",
    "solid-checker>=1.0.4",
    "radon>=6.0.1",
    "vulture>=2.14",
]
# Development dependencies (linting, type checking, code quality)
dev = [
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "msgspec>=0.20.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "websockets>=13.1",
    "aiosqlite>=0.20.0",
    "pillow>=12.0.0",
    "aiokafka>=0.12.0",
    "aio-pika>=9.5.8",
    "grpclib>=0.4.7",
    "zeep>=4.2.1",
    "graphql-core>=3.2.3",
    "gql>=3.5.0",
    "aiohttp>=3.10.0",
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
]
# All development tools (test + dev)
all = [
    # Testing dependencies
    "pytest>=8.5.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "pytest-playwright>=0.4.4",
    "pytest-resource-usage>=1.0.0",
    "psutil>=5.9.0",
    "allure-pytest>=2.13.2",
    # Development dependencies
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "msgspec>=0.20.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "websockets>=13.1",
    "aiosqlite>=0.20.0",
    "pillow>=12.0.0",
    "aiokafka>=0.12.0",
    "aio-pika>=9.5.8",
    "grpclib>=0.4.7",
    "zeep>=4.2.1",
    "graphql-core>=3.2.3",
    "gql>=3.5.0",
    "aiohttp>=3.10.0",
    "aiomysql>=0.3.2",
    "asyncpg>=0.31.0",
    # Dev support Libraries
    "ruff>=0.8.0",
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
    "types-pyyaml>=6.0.12.20250516",
    "solid-checker>=1.0.4",
    "radon>=6.0.1",
    "vulture>=2.14",
]
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["py_web_automation"]
[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Add project root to Python path for imports
pythonpath = ["."]
# Output and reporting
addopts = [
    "--strict-markers",
    "--strict-config",
    "-vv",
    "--tb=short",
    "--cov=py_web_automation",
    "--cov-report=html:report/coverage",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--durations=10",
    "--maxfail=5",
    "-n", "8",
]
# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "performance: Performance tests",
    "api: API testing tests",
    "ui: UI testing tests",
    "db: Database testing tests",
    "websocket: WebSocket testing tests",
    "grpc: gRPC testing tests",
    "soap: SOAP testing tests",
    "graphql: GraphQL testing tests",
    "kafka: Kafka message broker testing tests",
    "rabbitmq: RabbitMQ message broker testing tests",
    "smoke: Smoke tests",
    "regression: Regression tests",
    "report_duration: Measure test execution time (pytest-resource-usage)",
    "report_tracemalloc: Track memory allocations using tracemalloc (pytest-resource-usage)",
    "report_uss: Track unique set size using psutil (pytest-resource-usage)",
    "limit_memory: Fail test if memory usage exceeds specified limit (e.g., '100MB', '50KB')",
]
# Test execution
minversion = "8.0"
asyncio_mode = "auto"
[tool.coverage.run]
source = ["py_web_automation"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*_cache*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if DEBUG_MODE:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
[tool.coverage.html]
directory = "report/coverage"
[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "B019",  # do not use function calls in class variable definitions
    "S101",  # use of assert detected (security: assert statements can be disabled)
    "S105",  # possible hardcoded password (security: potential password in string)
    "S602",  # shell injection via subprocess (security: shell=True in subprocess) 
]
ignore = [
    "B027",  # Empty method in abstract base class (optional hooks in Plugin)
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Disable for dynamic JSON parsing
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
ignore_missing_imports = false
show_error_codes = true
[[tool.mypy.overrides]]
module = [
    "aiokafka.*",  # Has stubs but no py.typed marker
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "examples.*",
]
# Relax type checking for tests and examples
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
ignore_errors = true
